--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 8888
+spring:
+  datasource:
+    url: jdbc:mysql://localhost/mkyong?useSSL=false
+    username: root
+    password: password
+    driver-class-name: com.mysql.jdbc.Driver
